--- a/component/forms/schema/components/section/section.html
+++ b/component/forms/schema/components/section/section.html
@@ -40,7 +40,7 @@
         </ul>
     </div>
     <div class="box-properties-container" ng-class="{ visible: section.showProperties }">
-        <div class="padding">
+        <div class="pad">
             <div ng-include="'forms/schema/components/section/section-properties.html'"></div>
         </div>
     </div>
