--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -1,56 +1,54 @@
 <uib-tabset>
     <uib-tab index="0" heading="Properties">
-        <div class="pad">
-            <form class="form-horizontal" name="sectionPropertiesForm">
-                <div class="form-group"
-                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-sectionName.$invalid}">
-                    <label for="{{section.name}}-sectionName" class="col-sm-2 control-label">Name:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="{{section.name}}-sectionName"
-                               name="{{section.name}}-sectionName" placeholder="Name..." ng-model="section.name"
-                               ng-required="true">
-                    </div>
+        <div class="pad form-horizontal">
+            <div class="form-group"
+                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-sectionName.$invalid}">
+                <label for="{{name}}-sectionName" class="col-sm-2 control-label">Name:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="{{name}}-sectionName"
+                           name="{{name}}-sectionName" placeholder="Name..." ng-model="section.name"
+                           ng-required="true">
                 </div>
-                <div class="form-group"
-                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-title.$invalid}">
-                    <label for="{{section.name}}-title" class="col-sm-2 control-label">Title:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="{{section.name}}-title"
-                               name="{{section.name}}-title" placeholder="Title..." ng-model="section.title"
-                               ng-required="false">
-                    </div>
+            </div>
+            <div class="form-group"
+                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-title.$invalid}">
+                <label for="{{name}}-title" class="col-sm-2 control-label">Title:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="{{name}}-title"
+                           name="{{name}}-title" placeholder="Title..." ng-model="section.title"
+                           ng-required="false">
                 </div>
-                <div class="form-group"
-                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-rows.$invalid}">
-                    <label for="{{section.name}}-rows" class="col-sm-2 control-label">Rows:</label>
-                    <div class="col-sm-3">
-                        <input type="number" class="form-control" id="{{section.name}}-rows"
-                               name="{{section.name}}-rows" placeholder="Rows..." ng-model="section.rows.length"
-                               ng-required="false" ng-disabled="true">
-                    </div>
-                    <div class="col-lg-4">
-                        <button type="button" class="btn btn-primary" ng-click="addRow()">Add row</button>
-                    </div>
+            </div>
+            <div class="form-group"
+                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-rows.$invalid}">
+                <label for="{{name}}-rows" class="col-sm-2 control-label">Rows:</label>
+                <div class="col-sm-3">
+                    <input type="number" class="form-control" id="{{name}}-rows"
+                           name="{{name}}-rows" placeholder="Rows..." ng-model="section.rows.length"
+                           ng-required="false" ng-disabled="true">
                 </div>
-                <div class="form-group"
-                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-hideLabel.$invalid}">
-                    <label for="{{section.name}}-hideLabel" class="col-sm-2 control-label"
-                           title="Indicates if will show title or not.">Hide Title:</label>
-                    <div class="col-sm-10">
-                        <input type="checkbox" id="{{section.name}}-hideLabel" name="{{section.name}}-hideLabel"
-                               ng-model="section.hideLabel">
-                    </div>
+                <div class="col-lg-4">
+                    <button type="button" class="btn btn-primary" ng-click="addRow()">Add row</button>
                 </div>
-                <div class="form-group"
-                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-exportable.$invalid}">
-                    <label for="{{section.name}}-exportable" class="col-sm-2 control-label"
-                           title="Indicates if will show title or not.">Exportable:</label>
-                    <div class="col-sm-10">
-                        <input type="checkbox" id="{{section.name}}-exportable" name="{{section.name}}-exportable"
-                               ng-model="section.exportable">
-                    </div>
+            </div>
+            <div class="form-group"
+                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-hideLabel.$invalid}">
+                <label for="{{name}}-hideLabel" class="col-sm-2 control-label"
+                       title="Indicates if will show title or not.">Hide Title:</label>
+                <div class="col-sm-10">
+                    <input type="checkbox" id="{{name}}-hideLabel" name="{{name}}-hideLabel"
+                           ng-model="section.hideLabel">
                 </div>
-            </form>
+            </div>
+            <div class="form-group"
+                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-exportable.$invalid}">
+                <label for="{{name}}-exportable" class="col-sm-2 control-label"
+                       title="Indicates if will show title or not.">Exportable:</label>
+                <div class="col-sm-10">
+                    <input type="checkbox" id="{{name}}-exportable" name="{{name}}-exportable"
+                           ng-model="section.exportable">
+                </div>
+            </div>
         </div>
     </uib-tab>
     <uib-tab index="1" heading="Debug" ng-show="debugMode">
