Fixed error in forms components with dialogs translations if language is present.

--- a/component/forms/schema/components/row/row.html
+++ b/component/forms/schema/components/row/row.html
@@ -33,7 +33,7 @@
         <!-- /.box-body -->
     </div>
     <div class="box-properties-container" ng-class="{ visible: row.showProperties }">
-        <div class="padding">
+        <div class="pad no-padding-top">
             <div ng-include="'forms/schema/components/row/row-properties.html'"></div>
         </div>
     </div>
