Fixed form component internal submit error, validation error.

--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -59,7 +59,7 @@
                 <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="clear()">
                     <span class="fa fa-trash-o"></span>&nbsp;<span>Clear</span>
                 </button>
-                <button type="submit" ng-disabled="{{schema.name}}.$invalid" class="btn btn-primary">
+                <button type="submit" ng-disabled="{{name}}.$invalid" class="btn btn-primary">
                     <span class="fa fa-save"></span>&nbsp;<span>Save</span>
                 </button>
             </div>
