Fixed form component internal submit error, validation error.

--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -1,4 +1,4 @@
-<div class="">
+<div ng-if="schema">
     <div class="form-header with-border">
         <h3 class="box-title" ng-hide="schema.hideLabel" ng-bind-html="schema.label"></h3>
     </div>
