--- a/component/forms/common/fields/select2.html
+++ b/component/forms/common/fields/select2.html
@@ -1,6 +1,6 @@
 <ui-select ods-dynamic-name="field.name" name="{{field.name}}" id="{{field.name + dev}}" ng-model="field.value"
-           disabled="{{field.readonly}}" ui-select-required="getRequired(field)"
-           close-on-select="true" title="{{field.tooltip}}">
+           ng-disabled="field.readonly" ui-select-required="getRequired(field)" close-on-select="true"
+           title="{{field.tooltip}}">
     <ui-select-match placeholder="{{field.placeholder}}">
         {{getSelectFieldTitleValue(field, $select.selected)}}
     </ui-select-match>
