--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -16,7 +16,23 @@
                     <strong>Information! </strong>{{message}}
                 </div>
                 <div ng-repeat="section in schema.layout">
-                    <h4 ng-bind-html="section.title" ng-hide="hideTitle(section)"></h4>
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <h4 ng-bind-html="section.title" ng-hide="hideTitle(section)"></h4>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="box-tools pull-right">
+                                <button class="btn btn-warning" title="Clone Section" ng-if="section.canClone"
+                                        ng-click="cloneSection(section)">
+                                    <i class="fa fa-clone"></i>
+                                </button>
+                                <button class="btn btn-danger" title="Remove Section" ng-if="section.canClone"
+                                        ng-click="removeSection($index)">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="{{row.cssClass}}" ng-repeat="row in section.rows">
                         <div class="{{col.cssClass}}" ng-repeat="col in row.cols">
                             <div class="" ng-repeat="field in col.fields">
