--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -1,8 +1,7 @@
 <uib-tabset>
     <uib-tab index="0" heading="Properties">
         <div class="pad form-horizontal">
-            <div class="form-group"
-                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-sectionName.$invalid}">
+            <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{name}}-sectionName.$invalid}">
                 <label for="{{name}}-sectionName" class="col-sm-2 control-label">Name:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="{{name}}-sectionName"
@@ -10,8 +9,7 @@
                            ng-required="true">
                 </div>
             </div>
-            <div class="form-group"
-                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-title.$invalid}">
+            <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{name}}-title.$invalid}">
                 <label for="{{name}}-title" class="col-sm-2 control-label">Title:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="{{name}}-title"
@@ -19,8 +17,7 @@
                            ng-required="false">
                 </div>
             </div>
-            <div class="form-group"
-                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-rows.$invalid}">
+            <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{name}}-rows.$invalid}">
                 <label for="{{name}}-rows" class="col-sm-2 control-label">Rows:</label>
                 <div class="col-sm-3">
                     <input type="number" class="form-control" id="{{name}}-rows"
@@ -31,8 +28,7 @@
                     <button type="button" class="btn btn-primary" ng-click="addRow()">Add row</button>
                 </div>
             </div>
-            <div class="form-group"
-                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-hideLabel.$invalid}">
+            <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{name}}-hideLabel.$invalid}">
                 <label for="{{name}}-hideLabel" class="col-sm-2 control-label"
                        title="Indicates if will show title or not.">Hide Title:</label>
                 <div class="col-sm-10">
@@ -40,8 +36,21 @@
                            ng-model="section.hideLabel">
                 </div>
             </div>
-            <div class="form-group"
-                 ng-class="{'has-error': sectionPropertiesForm.{{name}}-exportable.$invalid}">
+            <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{name}}-canClone.$invalid}">
+                <label for="{{name}}-canClone" class="control-label col-sm-2">Can be Cloned:</label>
+                <div class="col-sm-10">
+                    <input type="checkbox" id="{{name}}-canClone" name="{{name}}-canClone"
+                           ng-model="section.canClone">
+                </div>
+            </div>
+            <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{name}}-clonedCanCloned.$invalid}">
+                <label for="{{name}}-clonedCanCloned" class="control-label col-sm-2">Cloned can clone?</label>
+                <div class="col-sm-10">
+                    <input type="checkbox" id="{{name}}-clonedCanCloned" name="{{name}}-clonedCanCloned"
+                           ng-model="section.clonedCanCloned">
+                </div>
+            </div>
+            <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{name}}-exportable.$invalid}">
                 <label for="{{name}}-exportable" class="col-sm-2 control-label"
                        title="Indicates if will show title or not.">Exportable:</label>
                 <div class="col-sm-10">
