--- a/component/address/address.html
+++ b/component/address/address.html
@@ -1,6 +1,6 @@
-<label ng-show="label" class="control-label" for="udt-address">{{label}}</label>
+<label ng-show="label" class="control-label" for="ods-address">{{label}}</label>
 <div class="input-group">
-    <input type="text" class="form-control" name="udt-address" id="udt-address" readonly
+    <input type="text" class="form-control" name="ods-address" id="ods-address" readonly
     value="{{printName(ngModel)}}">
     <span class="input-group-addon" ng-click="openModal()">
         <i class="fa fa-external-link"></i></span>
