--- a/component/forms/common/fields/datetime.html
+++ b/component/forms/common/fields/datetime.html
@@ -1,6 +1,6 @@
 <div class="input-group">
     <input id="{{field.name + dev}}" class="form-control" ods-dynamic-name="field.name" type="text"
-           enable-time="field.enableTime" datetime-picker="{{field.format}}" ng-required="getRequired(field)"
+           enable-time="field.enableTime" uib-datepicker-popup="{{field.format}}" ng-required="getRequired(field)"
            ng-model="field.value" is-open="field.open" model-options="field.options" ng-disabled="field.readonly"
             ng-change="field.value == '' ? null : field.value"/>
     <span class="input-group-btn">
