--- a/component/forms/common/fields/datetime.html
+++ b/component/forms/common/fields/datetime.html
@@ -1,7 +1,8 @@
 <div class="input-group">
     <input id="{{field.name + dev}}" class="form-control" ods-dynamic-name="field.name" type="text"
            enable-time="field.enableTime" datetime-picker="{{field.format}}" ng-required="getRequired(field)"
-           ng-model="field.value" is-open="field.open" model-options="field.options" ng-disabled="field.readonly"/>
+           ng-model="field.value" is-open="field.open" model-options="field.modelOptions" ng-disabled="field.readonly"
+           datepicker-append-to-body="true"/>
     <span class="input-group-btn">
         <button type="button" class="btn btn-default" ng-click="openCalendar(field)" ng-disabled="field.readonly">
             <i class="fa fa-calendar"></i>
