--- a/component/forms/schema/components/datetime/datetime.html
+++ b/component/forms/schema/components/datetime/datetime.html
@@ -1,2 +1,12 @@
 <div ng-include="'forms/schema/components/label.html'"></div>
-<div ng-include="'forms/common/fields/datetime.html'"></div>
+<div class="input-group">
+    <input id="{{field.name}}" class="form-control" ods-dynamic-name="field.name" type="text"
+           enable-time="field.enableTime" datetime-picker="{{field.format}}" ng-required="getRequired(field)"
+           ng-model="field.value" is-open="field.openInEditMode" model-options="field.modelOptions"
+           ng-disabled="field.readonly" datepicker-append-to-body="true"/>
+    <span class="input-group-btn">
+        <button type="button" class="btn btn-default" ng-click="openCalendar(field)" ng-disabled="field.readonly">
+            <i class="fa fa-calendar"></i>
+        </button>
+    </span>
+</div>
