--- a/component/forms/common/fields/select.html
+++ b/component/forms/common/fields/select.html
@@ -1,4 +1,4 @@
-<select class="form-control" ods-dynamic-name="field.name" name="{{field.name}}" id="{{field.name + dev}}"
+<select class="form-control" ods-dynamic-name="getUniqueName(field)" id="{{getUniqueName(field)}}"
         ng-model="field.value" title="{{field.tooltip}}" ng-required="getRequired(field)" ng-disabled="field.readonly"
         ng-options="element as element.name for element in field.options | limitTo: field.limitTo track by element.id">
     <option value="" disabled hidden>{{field.placeholder}}</option>
