--- a/component/forms/schema/components/radio-list/radio-list.html
+++ b/component/forms/schema/components/radio-list/radio-list.html
@@ -1,2 +1,2 @@
-<label class="control-label" for="{{field.name}}">{{field.label}}</label>
+<div ng-include="'forms/schema/components/label.html'"></div>
 <div ng-include="'forms/common/fields/radio-list.html'"></div>
