--- a/component/forms/schema/components/checkbox/checkbox.html
+++ b/component/forms/schema/components/checkbox/checkbox.html
@@ -1,2 +1,2 @@
-<label class="control-label" for="{{field.name}}">Checkbox</label>
+<div ng-include="'forms/schema/components/label.html'"></div>
 <div ng-include="'forms/common/fields/checkbox.html'"></div>
