--- a/component/forms/common/fields/textarea.html
+++ b/component/forms/common/fields/textarea.html
@@ -1,4 +1,4 @@
-<textarea class="form-control" ods-dynamic-name="getUniqueName(field)" id="{{getUniqueName(field)}}"
+<textarea autoheight class="form-control" ods-dynamic-name="getUniqueName(field)" id="{{getUniqueName(field)}}"
           placeholder="{{field.placeholder}}" title="{{field.tooltip}}" ng-model="field.value"
           ng-required="getRequired(field)" type="{{field.type}}" ng-minlength="getMinLength(field)"
           ng-maxlength="getMaxLength(field)" rows="{{field.rows}}" data-resize="disabled" ng-readonly="field.readonly">
