--- a/component/forms/common/viewer/input.html
+++ b/component/forms/common/viewer/input.html
@@ -1,5 +1,1 @@
-<div ng-bind-html="field.value"></div>
-
-<!--<input class="form-control" ods-dynamic-name="field.name" id="{{field.name}}" placeholder="{{field.placeholder}}"-->
-       <!--title="{{field.tooltip}}" ng-model="field.value" ng-required="getRequired(field)" type="{{field.type}}"-->
-       <!--ng-minlength="getMinLength(field)" ng-maxlength="getMaxLength(field)" ng-pattern="getPattern(field)"/>-->
+<div ng-bind-html="field.value" style="white-space:pre-wrap;"></div>
