--- a/component/forms/schema/components/textarea/textarea-properties.html
+++ b/component/forms/schema/components/textarea/textarea-properties.html
@@ -3,6 +3,7 @@
         <form name="fieldPropertiesForm" class="form-horizontal">
             <div class="box-body padding-top">
                 <div ng-include="'forms/schema/components/base-properties/common-properties.html'"></div>
+                <div ng-include="'forms/schema/components/base-properties/text-properties.html'"></div>
             </div>
         </form>
     </uib-tab>
