Add ng-model-options setting updateOn: 'blur' to reduce  cycles

--- a/component/forms/common/fields/input.html
+++ b/component/forms/common/fields/input.html
@@ -1,4 +1,5 @@
 <input class="form-control" ods-dynamic-name="getUniqueName(field)" id="{{getUniqueName(field)}}"
        placeholder="{{field.placeholder}}" title="{{field.tooltip}}" ng-model="field.value"
-       ng-required="getRequired(field)" type="{{field.type}}" ng-minlength="getMinLength(field)"
-       ng-maxlength="getMaxLength(field)" ng-pattern="getPattern(field)" ng-readonly="field.readonly"/>
+       ng-model-options="{ updateOn: 'blur' }" ng-required="getRequired(field)" type="{{field.type}}"
+       ng-minlength="getMinLength(field)" ng-maxlength="getMaxLength(field)" ng-pattern="getPattern(field)"
+       ng-readonly="field.readonly"/>
