Improve options-textarea component

--- a/component/forms/common/viewer/plugins/options-textarea.html
+++ b/component/forms/common/viewer/plugins/options-textarea.html
@@ -1,1 +1,1 @@
-<div ng-bind-html="field.value.textarea" style="white-space:pre-wrap;"></div>
+<div ng-bind-html="field.value" style="white-space:pre-wrap;"></div>
