--- a/component/forms/schema/plugins/if-yes-radio/if-yes-radio-properties.html
+++ b/component/forms/schema/plugins/if-yes-radio/if-yes-radio-properties.html
@@ -26,6 +26,26 @@
                         </div>
                     </div>
                 </div>
+                <div class="row no-vertical-margin">
+                    <div class="form-group margin-bottom"
+                         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-on.$invalid}">
+                        <label for="{{field.name}}-on" class="col-sm-4 control-label">On label:</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="{{field.name}}-on" name="{{field.name}}-on"
+                                   placeholder="On label..." ng-model="field.on" ng-required="true">
+                        </div>
+                    </div>
+                </div>
+                <div class="row no-vertical-margin">
+                    <div class="form-group margin-bottom"
+                         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-off.$invalid}">
+                        <label for="{{field.name}}-off" class="col-sm-4 control-label">Off label:</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="{{field.name}}-off" name="{{field.name}}-off"
+                                   placeholder="Off label..." ng-model="field.off" ng-required="true">
+                        </div>
+                    </div>
+                </div>
                 <div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
             </div>
         </form>
