--- a/component/forms/common/fields/checkbox.html
+++ b/component/forms/common/fields/checkbox.html
@@ -2,8 +2,8 @@
     <br ng-show="field.ln">
     <label>
         <input ods-dynamic-name="getUniqueName(field)" id="{{getUniqueName(field)}}" ng-model="field.value"
-               type="{{field.type}}" placeholder="{{field.placeholder}}" ng-required="{{field.required}}"
-               title="{{field.tooltip}}" ng-disabled="field.readonly"/>
+               ng-model-options="{ debounce: 1000 }" type="{{field.type}}" placeholder="{{field.placeholder}}"
+               ng-required="{{field.required}}" title="{{field.tooltip}}" ng-disabled="field.readonly"/>
         <span class="ng-binding ng-scope">{{field.label}}</span>
     </label>
 </div>
