--- a/component/forms/common/fields/select2.html
+++ b/component/forms/common/fields/select2.html
@@ -1,6 +1,6 @@
 <ui-select ods-dynamic-name="getUniqueName(field)" id="{{getUniqueName(field)}}" ng-model="field.value"
-           close-on-select="true" ng-disabled="field.readonly" ui-select-required="getRequired(field)"
-           title="{{field.tooltip}}">
+           ng-model-options="{ debounce: 1000 }" close-on-select="true" ng-disabled="field.readonly"
+           ui-select-required="getRequired(field)" title="{{field.tooltip}}">
     <ui-select-match placeholder="{{field.placeholder}}">
         {{getSelectFieldTitleValue(field, $select.selected)}}
     </ui-select-match>
